Add opens for gradle process jacoco task.